# robotics-experiments

./: .gitignore  2dof.py  Untitled-1.md  blender_cm_calc.py  comNmasses.txt  com_inertia_trimesh.txt  control.py  controltheory.py  create_jaco.py  jaco_eulerlagrange.py  lyapcbfreprod.py  lyapredesign.py  test.txt  trimesh_test.py  vector_field.py  vfnewtest.py
control-lib/: control.py  controltheory copy.py
cpp/: cruzancona.cpp  cruzancona.hpp  test.cpp  test.py
cruz-ancona/: adaptivecbf.py  bakcupcruzancona.cpp  lyapredesign.py  runoffilne.py
cruz-ancona/cpp/: CMakeLists.txt  cruzancona.cpp  cruzancona.hpp  test.cpp  test.py
liegroup/: liegroup.m  liegroup.py  normtests.py  randommath.md  skew.m
liegroup/lie/: liealgebra.py  liegroup.py
models/: 2dofROBOT.blend  2dofROBOT_joined.blend  jaco_eulerlagrange.py  l2.mtl
models/kinova_kortex/: Kinova7dof_base.step  Kinova7dof_forearm.step  Kinova7dof_halfarm1.step  Kinova7dof_halfarm2.step  Kinova7dof_shoulder.step  Kinova7dof_wrist1.step  Kinova7dof_wrist2.step
simulations/: computedtorque.html  lyapredesign.html
slotine/: adaptive_vftest.py  proof.md  simulations_final.ipynb  simulations_python.py  slotine.py  slotine_vf.py  utils.py  vectorfield.jl  vectorfield2.jl
uaibot_addons/: com_test.py  math.py  planar_manipulator.py  vectorfield.py  vfcomplete.py
vftest/: vector_field.py  vfnewtest.py
